笔记图片路径更改为相对路径

--- a/.net笔记/Note/.net调用jar包.md
+++ b/.net笔记/Note/.net调用jar包.md
@@ -8,13 +8,13 @@
 
 - 本例子下载的是(7.2.4630.5版本)
 
-![image-20210919224348365](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919224348365.png)
+![image-20210919224348365](images\image-20210919224348365.png)
 
 - 将下载好的压缩包解压,本例子解压到了`D:\ikvm`目录下
 
 - 配置环境变量
 
-  ![image-20210919224830327](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919224830327.png)
+  ![image-20210919224830327](images\image-20210919224830327.png)
 
   
 
@@ -28,7 +28,7 @@
 
 - **特别注意:编译环境要在jdk1.7及以下，亲测jdk1.8编译生成的dll引用后无法使用*(本例子使用的jdk版本为jdk1.7.0_51)**
 
-  ![image-20210919225127641](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919225127641.png)
+  ![image-20210919225127641](images\image-20210919225127641.png)
 
 - 生成jar包(有安装idea或MyEclipse的可以直接用开发工具生成jar包)
 
@@ -36,17 +36,17 @@
 
   2. 在test文件夹下创建classes文件夹，并将编译好的class文件放进去
 
-     ![image-20210919225919455](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919225919455.png)
+     ![image-20210919225919455](images\image-20210919225919455.png)
 
   3. 在test文件夹下创建META-INF文件夹，并在里面创建MANIFEST.MF文件(空文件就行)
 
-     ![image-20210919230157323](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919230157323.png)
+     ![image-20210919230157323](images\image-20210919230157323.png)
 
   4. 生成jar包
 
      - 在test目录下输入cmd命令
 
-     ![image-20210919230355510](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919230355510.png)
+     ![image-20210919230355510](images\image-20210919230355510.png)
 
      - 执行命令生成jar包
 
@@ -54,9 +54,9 @@
        jar cvfm SM4Utils2.jar META-INF\MANIFEST.MF -C classes/ .
        ```
 
-       ![image-20210919230553624](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919230553624.png)
+       ![image-20210919230553624](images\image-20210919230553624.png)
 
-       ![image-20210919231530878](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919231530878.png)
+       ![image-20210919231530878](images\image-20210919231530878.png)
 
      
 
@@ -68,9 +68,9 @@
   ikvmc -out:C:\Users\he_zhw\Desktop\test\SM4Utils2.dll C:\Users\he_zhw\Desktop\test\SM4Utils2.jar
   ```
 
-  ![image-20210919231731561](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919231731561.png)
+  ![image-20210919231731561](images\image-20210919231731561.png)
 
-![image-20210919231936082](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919231936082.png)
+![image-20210919231936082](images\image-20210919231936082.png)
 
 
 
@@ -80,7 +80,7 @@
 
 - Nugget引用ikvm的dll包(本例使用的是8.1.5717版本,引用过低的版本会报错)
 
-  ![image-20210919232512260](D:\SourceRepository\学习笔记\.net笔记\images\image-20210919232512260.png)
+  ![image-20210919232512260](images\image-20210919232512260.png)
 
 - 引用生成的SM4Utils2.dll
 
