一些注意事项及解决方式

--- a/.net笔记/Note/注意事项.md
+++ b/.net笔记/Note/注意事项.md
@@ -96,3 +96,33 @@ using (StreamReader reader = new StreamReader(body))
 
 ![image-20211130223725622](images\image-20211130223725622.png)
 
+## .net6与.net5下WebApi模板的差异
+
+源码位置`aspnetcore-6.0.0\src\DefaultBuilder\src\WebApplication.cs`
+
+.net6下webapi的模板
+
+![image-20211202000908595](images\image-20211202000908595.png)
+
+.net5下的webapi的模板
+
+![image-20211202001040261](images\image-20211202001040261.png)
+
+对比以上两个模板可以看到，.net6中`app.UseAuthorization()`中间件没有在`app.UseRouting()`与`app.UseEndpoints()`之间注册，而中间件是必须要在这两者之间进行注册的
+
+![image-20211202001647234](images\image-20211202001647234.png)
+
+.net6调用源码，当WebApplication调用Run()方法后会执行以下代码
+
+Microsoft.AspNetCore.Builder.WebApplicationBuilder中的ConfigureApplication方法
+
+![image-20211202145618152](images\image-20211202145618152.png)
+
+![image-20211202152237034](images\image-20211202152237034.png)
+
+当请求进来时会先依次执行外层的中间件，再执行WebApplication注册的中间件，**相当于WebApi中的所有由WebApplication注册的中间件都包含在`app.UseRouting()`与`app.UseEndpoints()`之间执行**
+
+再看.net6下创建的mvc模板,因为已经在在WebApplication中注册过路由中间件,所以在Microsoft.AspNetCore.Builder.WebApplicationBuilder中的ConfigureApplication方法就不再进行注册，所以请求进来时会按照在WebApplication中的中间件顺序执行
+
+![image-20211202153258049](images\image-20211202153258049.png)
+
