--- a/.net笔记/Note/.NET高级调试学习笔记.md
+++ b/.net笔记/Note/.NET高级调试学习笔记.md
@@ -68,7 +68,7 @@ bc *
 
 ## `SOS`扩展命令
 
-`WinDbg  Preview`会自动加载`sos.dll`，如果是其他版本的`WinDbg`需要手动加载对饮高版本的`sos.dll`
+`WinDbg  Preview`会自动加载`sos.dll`，如果是其他版本的`WinDbg`需要手动加载对应高版本的`sos.dll`
 
 ```powershell
 .load C:\Windows\Microsoft.NET\Framework\v4.0.30319\SOS.dll
