--- a/.net笔记/Other/.net Framework配置文件/配置文件读取与配置.md
+++ b/.net笔记/Other/.net Framework配置文件/配置文件读取与配置.md
@@ -796,13 +796,13 @@ namespace ConfigurationDemo
 
 或者配置`ORACLE_HOME`环境变量就可以不用配置`TNS_ADMIN`节点
 
-![图片1](E:\学习笔记\C#\.net Framework配置文件\Image\图片1.png)
+![图片1](Image\图片1.png)
 
 
 
 ------
 
-![图片2](E:\学习笔记\C#\.net Framework配置文件\Image\图片2.png)
+![图片2](Image\图片2.png)
 
 
 
